--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "earcut": "^3.0.2",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "three": "^0.182.0",
     "web-vitals": "^2.1.4"
   },
